src/objects/SalesModel_Device__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Sales Models</relationshipLabel>
        <relationshipName>SalesModel_Devices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Model__c</fullName>
        <label>Sales Model</label>
        <referenceTo>Sales_Model__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>SalesModel_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SalesModel Device</label>
    <nameField>
        <displayFormat>SMD-{0000000}</displayFormat>
        <label>SalesModel Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesModel Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>